Fixed FindBugs issues.